# social_science_replicability

./: .env.example  .gitignore  Claude.md  README.md  TECHNICAL_SPEC.md  opencode.json  pyproject.toml  requirements.txt  run_claude_code.py  run_codex.py  run_judge.py  test_opencode_run.py
archive/: comparison.py  inspect_rubrics.ipynb  run_verify_explain.py  test_comparison.py  test_rubric_creation.ipynb
config/: benchmark_4way.yaml  benchmark_config.yaml  default_config.yaml
docs/: opencode_vs_langgraph.md
scripts/: download_openicpsr.py  download_openicpsr_single.py  run_extraction_merged_test.py  run_extraction_test.py
src/: __init__.py  benchmark_cli.py  main.py  orchestrator.py
src/agents/: __init__.py  base.py  collector.py  explainer.py  extractor.py  replicator.py  verifier.py
src/benchmark/: __init__.py  artifact_parser.py  claude_code_runner.py  codex_runner.py  config.py  evaluator.py  judge.py  opencode_runner.py  results.py  runner.py  structured_runner.py  task_prompt.py
src/models/: __init__.py  config.py  schemas.py
src/utils/: __init__.py  code_executor.py  logging_utils.py  pdf_parser.py
tests/: conftest.py  test_agents.py  test_benchmark.py  test_code_executor.py  test_collector.py  test_config.py  test_logging_utils.py  test_orchestrator.py  test_pdf_parser.py  test_schemas.py
